--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="" name="author">
     <link href="../../favicon.ico" rel="icon">
 
-    <title>ClearCareer</title><!-- Bootstrap core CSS -->
+    <title>AbbyMoore</title><!-- Bootstrap core CSS -->
     <link crossorigin="anonymous" href=
     "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     integrity=
@@ -41,11 +41,10 @@
                         <h1>I'm Abby</h1>
 
 
-                        <p class="intro-desc"><span>Designer</span>
+                        <p class="intro-desc"><span>Ideator</span>
                         <span class="colour-splash">•</span>
-                        <span>Adventurer</span> <span class=
-                        "colour-splash">•</span> <span>Coffee
-                        Drinker</span></p>
+                        <span>Scientific informaticist</span> <span class=
+                        "colour-splash">•</span> <span>App developer</span></p>
                     </div>
                     <!-- /col-md-12 -->
                 </div>
@@ -64,12 +63,12 @@
                                 </a> -->
                              <a href="www.linkedin.com/in/abigail-moore-01a007127"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a>   <!--<a href=
+                            "fa fa-linkedin fa-3x"></i></a>   <a href=
                             "https://medium.com/@izzydoesizzy" target=
                             "_blank"><i class="fa fa-medium fa-3x"></i></a>
-                            <a href="http://www.youtube.com/user/izzydoesizzy"
+                            <a href="https://orcid.org/0000-0001-8627-777X"
                             target="_blank"><i class=
-                            "fa fa-youtube fa-3x"></i></a>--> <a href=
+                            "fa fa-orcid fa-3x"></i></a> <a href=
                             "http://www.github.com/aemoore62" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
                         </div><!-- /social -->
@@ -182,10 +181,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
-                    <h2>Things I've done</h2>
+                    <h2>How I got here</h2>
 
 
-                    <p class="lead">Here are a few cool things about me</p>
+                   <!-- <p class="lead">Here are a few cool things about me</p> -->
 
                     <hr class="white">
                 </div>
