--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
                                 </a> -->
                              <a href="www.linkedin.com/in/abigail-moore-01a007127"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a>   <a href=
+                            "fa fa-linkedin fa-3x"></i></a>  <!--  <a href=
                             "https://medium.com/@izzydoesizzy" target=
-                            "_blank"><i class="fa fa-medium fa-3x"></i></a>
+                            "_blank"><i class="fa fa-medium fa-3x"></i></a> -->
                             <a href="https://orcid.org/0000-0001-8627-777X"
                             target="_blank"><i class=
-                            "fa fa-orcid fa-3x"></i></a> <a href=
+                            "fa-brands fa-orcid fa-3x"></i></a> <a href=
                             "http://www.github.com/aemoore62" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
                         </div><!-- /social -->
                     </div><!-- /col-md-8 -->
-                </div><!-- /row -->
+                </div><!-- /row --> 
                 
 
 
@@ -134,7 +134,7 @@
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-user"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Ideate</h2>
 
 
                     <p>Lorem Ipsum is simply dummy text of the printing and
@@ -148,7 +148,7 @@
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-star"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Metadata management</h2>
 
 
                     <p>Lorem Ipsum is simply dummy text of the printing and
@@ -162,7 +162,7 @@
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-diamond"></span>
 
-                    <h2>Heading</h2>
+                    <h2>App development</h2>
 
 
                     <p>Lorem Ipsum is simply dummy text of the printing and
