update icons and timeline

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-user"></span>
+                    <span class="lnr lnr-earth"></span>
 
                     <h2>Ideate</h2>
 
@@ -146,7 +146,7 @@
 
 
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-star"></span>
+                    <span class="lnr lnr-database"></span>
 
                     <h2>Metadata management</h2>
 
@@ -160,7 +160,7 @@
 
 
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-diamond"></span>
+                    <span class="lnr lnr-users"></span>
 
                     <h2>App development</h2>
 
@@ -211,13 +211,15 @@
 
 
                             <div class="timeline-content right">
-                                <h2>This Happened</h2>
+                                <h2>Developed first spreadsheet app</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>Prior to beginning my undergrad education, I worked as a quality assurance professional. 
+                                    I saw an opportunity to automate generating labels by developing an app in MS Excel. 
+                                    Not knowing anything about programming, I started with macros and then discovered 
+                                    that I could directly tell the computer what I want it to do instead of recording 
+                                    what I want it to do. Little did I realize that this project was the starting 
+                                    block for my effort to advance sharing information about scientific experiments. </p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
