add timeline info

--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-star"></i>
+                                <i class="fa fa-users"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
 
                             <div class="timeline-content right">
-                                <h2>Developed first spreadsheet app</h2>
+                                <h2>We can automate this with spreadsheets.</h2>
 
 
                                 <p>Prior to beginning my undergrad education, I worked as a quality assurance professional. 
@@ -231,19 +231,23 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-cog"></i>
+                                <i class="fa fa-earth"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
 
                             <div class="timeline-content left">
-                                <h2>This Happened</h2>
+                                <h2>We can use slime mold to help humans make decisions.</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>As an undergrad, I collaborated with diverse researchers to explore how slime mold may be 
+                                    used to respond to problems in society. Slime mold are single-celled organisms that ban together 
+                                    when the going gets tough. I used slime mold to investigate the distribution of and access to human food sources. 
+                                    Namely, I mapped the slime mold's food sources with varying levels of nutrients to 
+                                    food stores with different varieties of products, e.g. convenience store vs. super market. I strategically 
+                                    placed slime mold's food over top a map of stores located in Baltimore, Maryland, USA. Then, I filmed 
+                                    how the slime mold navigated the food stores. This project enabled me to see how I can make use of unexpected 
+                                    resources to approach problems in an unconventional fashion.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
@@ -255,19 +259,24 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-plane"></i>
+                                <i class="fa fa-database"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
 
                             <div class="timeline-content right">
-                                <h2>This Happened</h2>
+                                <h2>Why's it so hard to find and use the metadata?</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>After attending a scientific conference for the first time as an undergrad, I decided that I wanted 
+                                    to use public data to investige the impact of lung cancer treatments on biological outcomes. Given that my
+                                    first exposure to scientists was in an FDA-regulated, I assumed that all experiments are conducted in a
+                                    highly consisten fashion and that significat details about experimentation are reported. I was shocked to 
+                                    learn how common it is for similar studies to be conducted with different material and procedures. I was 
+                                    further shocked to learn how difficult it was to access common, critical metadata like the number of passages
+                                    for cells. I quickly realized that I couldn't conduct the original study and instead investigated the impact
+                                    of experimental factors on untreated cells. This project ignited my interest to ease reuse of both metadata 
+                                    and analytical data. </p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
@@ -279,19 +288,22 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-group"></i>
+                                <i class="fa fa-users"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
 
                             <div class="timeline-content left">
-                                <h2>This Happened</h2>
+                                <h2>sCubed positions metadata to mutually benefit authors and the scientific community.</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>As a graduate student, I joined the Edison Lab and the Compound Identification Core (CIDC) 
+                                    in the NIH Metabolomics Consortium. While a primary goal of the CIDC was to advance methods 
+                                    for identifying compounds, the CIDC also had a goal to share complex information about how 
+                                    they were conducting their experiments. The CIDC knew that sharing this info would enable 
+                                    others to reuse the CIDC's research output. In this group, I began developing approaches to 
+                                    managing complex metadata related to heterogenous analytical data. My work in this group 
+                                    founded the user-centric approach that I adopt when developing applications.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
