--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-users"></i>
+                                <i class="lnr lnr-users"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -231,7 +231,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-earth"></i>
+                                <i class="lnr lnr-earth"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -259,7 +259,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-database"></i>
+                                <i class="lnr lnr-database"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -269,7 +269,7 @@
 
 
                                 <p>After attending a scientific conference for the first time as an undergrad, I decided that I wanted 
-                                    to use public data to investige the impact of lung cancer treatments on biological outcomes. Given that my
+                                    to use public data to investigate the impact of lung cancer treatments on biological outcomes. Given that my
                                     first exposure to scientists was in an FDA-regulated, I assumed that all experiments are conducted in a
                                     highly consisten fashion and that significat details about experimentation are reported. I was shocked to 
                                     learn how common it is for similar studies to be conducted with different material and procedures. I was 
@@ -288,7 +288,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-users"></i>
+                                <i class="lnr lnr-users"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -315,7 +315,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="fa fa-star"></i>
+                                <i class="lnr lnr-earth"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
