update icon size

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="lnr lnr-users"></i>
+                                <i class="lnr lnr-users-1"></i>                               
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
@@ -231,7 +231,7 @@
 
 
                             <div class="timeline-icon">
-                                <i class="lnr lnr-earth"></i>
+                                <i class="lnr lnr-earth-1"></i>
                             </div>
                             <!-- Content from timeline box and position (right or left)-->
 
