--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
-                    <h2>Skills</h2>
+                    <h2>A few of my favorite things</h2>
 
 
-                    <p class="lead">Here are a few cool things about me</p>
+                    <p class="lead">Here are a few abilities that I enjoy exercising</p>
 
                     <hr>
                 </div>
@@ -137,39 +137,33 @@
                     <h2>Ideate</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>I most enjoy originating ideas, both independently and collaboratively. I am keen to identify existing resources and
+                    repurpose them in novel ways. I feel brightest when I collaboratively synthesize concepts, technologies,
+                    inquiries, and insights that demonstrate the potential of narrowly explored spaces.</p>
                 </div>
 
 
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-database"></span>
 
-                    <h2>Metadata management</h2>
+                    <h2>Manage metadata</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>While managing metadata is often an unwanted hassle, I relish in the task to regard the wide-ranging utility of metadata while
+                    simultaneously attending to the details that make metadata impactful. I appreciate the breadth of thinking and implementation required
+                    to manage metadata, ranging from considering what a sample actually is to implementing models.</p>
                 </div>
 
 
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-users"></span>
 
-                    <h2>App development</h2>
+                    <h2>Develop apps</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>I like to repeatedly grapple with new and contrasting requirements until I've generated and prototyped ideas that highly satisfy users.
+                        To do this, I not only take a user-centric approach but also take opportunities to literally put myself in the users' regular
+                        workflow. I appreciate collaborating with others to see an app through to production.</p>
                 </div>
             </div> <!-- / row -->
         </div><!-- /container -->
