--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             "_blank"><i class="fa fa-medium fa-3x"></i></a> -->
                             <a href="https://orcid.org/0000-0001-8627-777X"
                             target="_blank"><i class=
-                            "fa-brands fa-orcid fa-3x"></i></a> <a href=
+                            "fa fa-orcid fa-3x"></i></a> <a href=
                             "http://www.github.com/aemoore62" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
                         </div><!-- /social -->
