--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </a> -->
                              <a href="www.linkedin.com/in/abigail-moore-01a007127"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a>  <!--  <a href=
+                            "fa fa-orcid fa-3x"></i></a>  <!--  <a href=
                             "https://medium.com/@izzydoesizzy" target=
                             "_blank"><i class="fa fa-medium fa-3x"></i></a> -->
                             <a href="https://orcid.org/0000-0001-8627-777X"
