--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="social">
-                             <!-- <a href="http://www.twitter.com/izzydoesizzy"
+                             <a href="http://www.twitter.com/izzydoesizzy"
                             target="_blank"><i class=
                             "fa fa-twitter fa-3x"></i></a> <a href=
                             "http://www.instagram.com/izzydoesizzy" target=
-                            "_blank"><i class="fa fa-instagram fa-3x"></i></a>  -->
-                            <!-- <a href="http://www.dribbble.com/izzydoesizzy" target="_blank">
+                            "_blank"><i class="fa fa-instagram fa-3x"></i></a>  
+                            <a href="http://www.dribbble.com/izzydoesizzy" target="_blank">
                                   <i class="fa fa-dribbble fa-3x"></i>
                                 </a> -->
                              <a href="www.linkedin.com/in/abigail-moore-01a007127"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a>  <!--  <a href=
+                            "fa fa-linkedin fa-3x"></i></a>  <a href=
                             "https://medium.com/@izzydoesizzy" target=
-                            "_blank"><i class="fa fa-medium fa-3x"></i></a> -->
+                            "_blank"><i class="fa fa-medium fa-3x"></i></a>
                             <a href="https://orcid.org/0000-0001-8627-777X"
                             target="_blank"><i class=
                             "fab fa-orcid fa-3x"></i></a> <a href=
