--- a/index.html
+++ b/index.html
@@ -50,24 +50,26 @@
                 </div>
 
 
-                <div class="row">
+                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="social">
-                             <a href="http://www.twitter.com/izzydoesizzy"
+                            <a href="http://www.twitter.com/izzydoesizzy"
                             target="_blank"><i class=
                             "fa fa-twitter fa-3x"></i></a> <a href=
                             "http://www.instagram.com/izzydoesizzy" target=
-                            "_blank"><i class="fa fa-instagram fa-3x"></i></a>  
-                            <a href="http://www.dribbble.com/izzydoesizzy" target="_blank">
+                            "_blank"><i class="fa fa-instagram fa-3x"></i></a> 
+                            <!-- <a href="http://www.dribbble.com/izzydoesizzy" target="_blank">
                                   <i class="fa fa-dribbble fa-3x"></i>
-                                </a> 
-                             <a href="www.linkedin.com/in/abigail-moore-01a007127"
+                                </a> -->
+                             <a href="https://ca.linkedin.com/in/ipiyale"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a>  <a href=
+                            "fa fa-linkedin fa-3x"></i></a> <a href=
                             "https://medium.com/@izzydoesizzy" target=
                             "_blank"><i class="fa fa-medium fa-3x"></i></a>
-                             <a href=
-                            "http://www.github.com/aemoore62" target=
+                            <a href="http://www.youtube.com/user/izzydoesizzy"
+                            target="_blank"><i class=
+                            "fa fa-youtube fa-3x"></i></a> <a href=
+                            "http://www.github.com/izzydoesizzy" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
                         </div><!-- /social -->
                     </div><!-- /col-md-8 -->
