--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <section class="section-image">
         <div class="img-overlay"></div>
-        <a href="https://github.com/izzydoesizzy/resumetemplate" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
-            <div class="intro">
+        <!--<a href="https://github.com/izzydoesizzy/resumetemplate" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="images/ae_img.png"></a>  -->  
+        <div class="intro">
                 <div class="row">
                     <div class="col-md-12">
                         <h5>Howdy</h5>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <img class="profilepic" src=
-                    "https://pbs.twimg.com/profile_images/641063961144750081/IqosL0KD.jpg">
+                    "images/ae_img.png.jpg">
 
                     <h2>About Me</h2>
 
