--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <img class="profilepic" src=
-                    "images/ae_img.png.jpg"/>
+                    "images/ae_img.png"/>
 
                     <h2>About Me</h2>
 
