--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <img class="profilepic" src="images/ae_img.png"/>
+                    <img class="profilepic" src="https://aemoore62.github.io/images/ae_img.png"/>
 
                     <h2>About Me</h2>
 
                     <hr>
 
 
-                    <p class="lead">I collaborate with diverse scientists to reimagine how scientists share complex information. As digital technologies advance, the mechanisms used to capture, store, and ultimately prepare scientific information for insight become increasingly important. To date, my work has concentrated on evolving how scientists employ ubiquitous technologies to share details about how investigations are conducted to, in turn, troubleshoot investigations and inform biological outcomes.</p>
+                    <p class="lead">I collaborate with diverse scientists to <b>reimagine how scientists share complex information<b>. As digital technologies advance, the mechanisms used to capture, store, and ultimately prepare scientific information for insight become increasingly important. To date, my work aims to <b>evolve how scientists employ ubiquitous technologies<b> to share details about how investigations are conducted to, in turn, troubleshoot investigations and inform biological outcomes.</p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
