fix profile img

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <img class="profilepic" src="https://aemoore62.github.io/resume/images/ae_img.png"/>
+                    <img class="profilepic" src="https://aemoore62.github.io/resume/images/ae_img.jpeg"/>
 
                     <h2>About Me</h2>
 
