--- a/index.html
+++ b/index.html
@@ -96,6 +96,124 @@
             </div><!-- / row -->
         </div><!-- /container -->
     </section>
+
+    
+<!-- 
+    BEGIN
+=========================================================
+ Rahil Taujale's webpage - v1.0.0
+=========================================================
+
+Created by: Rahil Taujale
+Date: 04/10/2020
+Copyright 2020 Rahil Taujale
+Licensed under CC By 4.0
+
+Template source from: Creative Tim (License Below)
+ 
+ -->
+<!-- Original Template License
+=========================================================
+ Paper Kit 2 - v2.2.0
+=========================================================
+
+ Product Page: https://www.creative-tim.com/product/paper-kit-2
+ Copyright 2019 Creative Tim (https://www.creative-tim.com)
+ Licensed under MIT (https://github.com/creativetimofficial/paper-kit-2/blob/master/LICENSE.md)
+
+ Coded by Creative Tim
+
+=========================================================
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
+
+
+<!-- Projects section -->
+  <div id="Projects" style="background: #fffee8"  class="container-fluid sectionHead1">
+    <div class="title">
+      <h3 class="font-weight-bold">Projects</h3>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-xs-12 text-center">
+        <!-- Row 1 -->
+        <div class="content">
+          <div class="grid">
+            <figure class="effect-marley">
+              <img class="d-block mx-auto mx-md-0" src="https://aemoore62.github.io/resume/images/scubed.png" alt="proj1"/>
+              <figcaption>
+                <h2>sCubed <span>Google Sheets add-on</span></h2>
+                <p>Complex information about scientific investigations in few spreadsheets.<br><br>Tags: Metadata management, App development</p>
+                <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank" >View more</a>
+              </figcaption>     
+            </figure>
+            <figure class="effect-marley">
+              <img class="d-block mx-auto mx-md-0" src="https://aemoore62.github.io/resume/images/scubed.png" alt="proj2"/>
+              <figcaption>
+                <h2>CIDC-UGA metadata <span>Comprehensive set of metadata</span></h2>
+                <p>Metadata open an investigation on the metabolome of C. elegans<br><br>Tags: Metadata management, Data wrangling, Data visualization</p>
+                <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank" >View more</a>
+              </figcaption>     
+            </figure>
+          </div>
+        </div>
+        <!-- Row 2 -->
+        <div class="content">
+          <div class="grid">
+            <figure class="effect-marley">
+              <img class="d-block mx-auto mx-md-0" src="https://aemoore62.github.io/resume/images/scubed.png" alt="proj3"/>
+              <figcaption>
+                <h2><span>R/SquareCube</span> R package</h2>
+                <p>An R package to completement sCubed.<br><br><br>Tags: Metadata management, Data visualization</p>
+                <a href="#" target="_blank" >Details coming soon.</a>
+              </figcaption>     
+            </figure>
+            <figure class="effect-marley">
+              <img class="d-block mx-auto mx-md-0" src="./assets/img/Project4.png" alt="proj4"/>
+              <figcaption>
+                <h2>Scientific <span>Communication</span></h2>
+                <p>A MATLAB based swiss army knife for metabolomics. Team effort from the Edison lab.<br><br><br>Tags: Metabolomics, MATLAB, Documentation</p>
+                <a href="https://aemoore62.github.io/resume/images/scubed.png" target="_blank" >View more</a>
+              </figcaption>     
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>  
+<!-- End Projects section -->
+
+<!-- 
+   END
+=========================================================
+ Rahil Taujale's webpage - v1.0.0
+=========================================================
+
+Created by: Rahil Taujale
+Date: 04/10/2020
+Copyright 2020 Rahil Taujale
+Licensed under CC By 4.0
+
+Template source from: Creative Tim (License Below)
+ 
+ -->
+<!-- Original Template License
+=========================================================
+ Paper Kit 2 - v2.2.0
+=========================================================
+
+ Product Page: https://www.creative-tim.com/product/paper-kit-2
+ Copyright 2019 Creative Tim (https://www.creative-tim.com)
+ Licensed under MIT (https://github.com/creativetimofficial/paper-kit-2/blob/master/LICENSE.md)
+
+ Coded by Creative Tim
+
+=========================================================
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
+
+
+
+    
     <!-- SKILLS SECTION -->
 
 
