--- a/index.html
+++ b/index.html
@@ -98,13 +98,20 @@
     </section>
 
 
-<div id="Projects" style="background: #fffee8"  class="container-fluid sectionHead1">
-    <div class="title">
-      <h3 class="font-weight-bold">Projects</h3>
-    </div>
+<div id=pProjects" class="section-primary">
+     <div class="container">
+      <div class="col-md-6 col-md-offset-3 text-center">
+
+          <h2>Projects</h2>
+
+                    <hr>
+    
     <a href="https://aemoore62.github.io/scubed.github.io/"" target="_blank">
   <img src="https://aemoore62.github.io/resume/images/scubed.png" />
+        <figcaption>sCubed is a Google Sheets add-on.</figcaption>
  </a>
+          </div>
+         </div>
      </div>
 
    
