--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
 
-<div id=pProjects" class="section-primary">
+<div id=projects" class="section-primary">
      <div class="container">
       <div class="col-md-6 col-md-offset-3 text-center">
 
@@ -107,9 +107,10 @@
                     <hr>
     
     <a href="https://aemoore62.github.io/scubed.github.io/"" target="_blank">
-  <img src="https://aemoore62.github.io/resume/images/scubed.png" />
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" style="width: 50%; height: 50%"/>
         <figcaption>sCubed is a Google Sheets add-on.</figcaption>
  </a>
+
           </div>
          </div>
      </div>
