--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <hr>
     
     <a href="https://aemoore62.github.io/scubed.github.io/"" target="_blank">
-  <img src="https://aemoore62.github.io/resume/images/scubed.png" style="width: 50%; height: 50%"/>
-        <figcaption>sCubed is a Google Sheets add-on.</figcaption>
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="25" height="25""/>
+        <figcaption>sCubed is a Google Sheets add-on that targets the provenace of physical material.</figcaption>
  </a>
 
           </div>
