--- a/index.html
+++ b/index.html
@@ -106,9 +106,13 @@
 
                     <hr>
     
-    <a href="https://aemoore62.github.io/scubed.github.io/"" target="_blank">
-  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="25" height="25""/>
+    <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="100" height="100"/>
         <figcaption>sCubed is a Google Sheets add-on that targets the provenace of physical material.</figcaption>
+ </a>
+          <a href="#" target="_blank">
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="100" height="100"/>
+        <figcaption>The CIDC-UGA metadata describe an investigation on the metabolome of C. elegans.</figcaption>
  </a>
 
           </div>
