--- a/index.html
+++ b/index.html
@@ -105,15 +105,19 @@
           <h2>Projects</h2>
 
                     <hr>
-    
+    <figure>
     <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">
-  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="100" height="100"/>
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"/>
         <figcaption>sCubed is a Google Sheets add-on that targets the provenace of physical material.</figcaption>
  </a>
+    </figure>
+
+          <figure>
           <a href="#" target="_blank">
-  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="100" height="100"/>
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"/>
         <figcaption>The CIDC-UGA metadata describe an investigation on the metabolome of C. elegans.</figcaption>
  </a>
+          </figure>
 
           </div>
          </div>
