--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 <h2>We can automate this with spreadsheets.</h2>
 
 
-                                <p>Prior to beginning my undergrad education, I worked as a quality assurance professional. 
+                                <p><b>2012.</b>Prior to beginning my undergrad education, I worked as a quality assurance professional. 
                                     I saw an opportunity to automate generating labels by developing an app in MS Excel. 
                                     Not knowing anything about programming, I started with macros and then discovered 
                                     that I could directly tell the computer what I want it to do instead of recording 
@@ -227,7 +227,7 @@
 
 
                             <div class="timeline-content left">
-                                <h2>We can use slime mold to help humans make decisions.</h2>
+                                <h2><b>2017.</b>We can use slime mold to help humans make decisions.</h2>
 
 
                                 <p>As an undergrad, I collaborated with diverse researchers to explore how slime mold may be 
@@ -255,7 +255,7 @@
 
 
                             <div class="timeline-content right">
-                                <h2>Why's it so hard to find and use the metadata?</h2>
+                                <h2><b>2018.</b>Why's it so hard to find and use the metadata?</h2>
 
 
                                 <p>After attending a scientific conference for the first time as an undergrad, I decided that I wanted 
@@ -284,7 +284,7 @@
 
 
                             <div class="timeline-content left">
-                                <h2>sCubed positions metadata to mutually benefit authors and the scientific community.</h2>
+                                <h2><b>2019.</b>sCubed positions metadata to mutually benefit authors and the scientific community.</h2>
 
 
                                 <p>As a graduate student, I joined the Edison Lab and the Compound Identification Core (CIDC) 
