--- a/index.html
+++ b/index.html
@@ -164,6 +164,63 @@
             </div> <!-- / row -->
         </div><!-- /container -->
     </section>
+
+ <!-- PROJECTS SECTION -->
+
+
+    <section class="section-image" id="projects">
+        <div class="img-overlay"></div>
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 section-heading">
+                    <h2>Products</h2>
+
+
+                   <!-- <p class="lead">Here are a few of my products.</p> -->
+
+                    <hr>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <span class="lnr lnr-earth"></span>
+
+                    <h2>sCubed</h2>
+
+
+                    <p>sCubed is a Google Sheets add-on that enables scientists to capture details of how investigations were conducted.</p>
+                </div>
+
+
+                <div class="col-md-4 text-center">
+                    <span class="lnr lnr-database"></span>
+
+                    <h2>R/SquareCube</h2>
+
+
+                    <p>SquareCube is an R package under development to complement sCubed.</p>
+                </div>
+
+
+                <div class="col-md-4 text-center">
+                    <span class="lnr lnr-users"></span>
+
+                    <h2>sSquared</h2>
+
+
+                    <p>sSquared is a framework for capturing the provenance of material.</p>
+                </div>
+            </div> <!-- / row -->
+        </div><!-- /container -->
+    </section>
+
+
+
+    
     <!-- TIMELINE SECTION -->
 
 
