update products and social links

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h2>Products</h2>
 
 
-                   <!-- <p class="lead">Here are a few of my products.</p> -->
+                   <p class="lead">Here are a few resources that I produced to advance information in the sciences.</p>
 
                     <hr>
                 </div>
@@ -409,15 +409,12 @@
 
                 <div class="col-md-4">
                     <div class="social-footer">
-                        <a href="http://www.twitter.com/izzydoesizzy" target=
-                        "_blank"><i class="fa fa-twitter"></i></a> <a href=
-                        "http://www.instagram.com/izzydoesizzy" target=
-                        "_blank"><i class="fa fa-instagram"></i></a> <a href=
-                        "https://ca.linkedin.com/in/ipiyale" target=
+                     <a href=
+                        "https://www.linkedin.com/in/abigailelizabeth/" target=
                         "_blank"><i class="fa fa-linkedin"></i></a>  <a href=
-                        "http://www.youtube.com/user/izzydoesizzy" target=
+                        "https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q" target=
                         "_blank"><i class="fa fa-youtube"></i></a> <a href=
-                        "http://www.github.com/izzydoesizzy" target=
+                        "https://github.com/aemoore62" target=
                         "_blank"><i class="fa fa-github"></i></a>
                     </div> <!-- /social footer -->
                 </div> <!-- /col-md-4 -->
