update products sect

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
  <!-- PROJECTS SECTION -->
 
 
-    <section class="section-image" id="projects">
-        <div class="img-overlay"></div>
+    <section class="section-primary" id="projects"> 
+      <div class="img-overlay"></div> 
 
 
         <div class="container">
