--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
 
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-earth"></span>
+                    <span <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">
+  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"/>
+        <figcaption>sCubed is a Google Sheets add-on that targets the provenace of physical material.</figcaption>
+ </a></span>
 
                     <h2>sCubed</h2>
 
