--- a/index.html
+++ b/index.html
@@ -187,12 +187,9 @@
 
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <span <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">
-  <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"/>
-        <figcaption>sCubed is a Google Sheets add-on that targets the provenace of physical material.</figcaption>
- </a></span>
+                    <span <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"/> </span>
 
-                    <h2>sCubed</h2>
+                    <h2> <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">sCubed </a></h2>
 
 
                     <p>sCubed is a Google Sheets add-on that enables scientists to capture details of how investigations were conducted.</p>
