--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
 
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <span <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"/> </span>
+                    <span> <img src="https://aemoore62.github.io/resume/images/scubed.png" width="200" height="200"> </span>
+
 
                     <h2> <a href="https://aemoore62.github.io/scubed.github.io/" target="_blank">sCubed </a></h2>
 
