add product images

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 
 
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-database"></span>
+                    <span> <img src="https://aemoore62.github.io/resume/images/squarecube.png" width="200" height="200"> </span>
 
-                    <h2>R/SquareCube</h2>
+                    <h2><a href="#" target="_blank">SquareCube</a></h2>
 
 
                     <p>SquareCube is an R package under development to complement sCubed.</p>
@@ -208,9 +208,9 @@
 
 
                 <div class="col-md-4 text-center">
-                    <span class="lnr lnr-users"></span>
+                    <span> <img src="ssquared" width="200" height="200"> </span>
 
-                    <h2>sSquared</h2>
+                    <h2><a href="#" target="_blank">sSquared </a></h2>
 
 
                     <p>sSquared is a framework for capturing the provenance of material.</p>
