--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 
                 <div class="col-md-4 text-center">
-                    <span> <img src="ssquared" width="200" height="200"> </span>
+                    <span> <img src="https://aemoore62.github.io/resume/images/ssquared.png" width="200" height="200"> </span>
 
                     <h2><a href="#" target="_blank">sSquared </a></h2>
 
