add interests sect

--- a/index.html
+++ b/index.html
@@ -386,6 +386,50 @@
             </div>
         </div> <!-- / container -->
     </section>
+
+
+    <!-- ABOUT SECTION -->
+    <section class="section-primary" id="about2">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 text-center">
+
+                    <h2>Personal interests</h2>
+
+                    <hr>
+
+
+                    <p class="lead">I enjoy competing in endurance events, including swimming, cycling, and running. </p>
+
+                    <div class="parent">
+
+<div>
+
+<img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png">
+    <figcaption>Start of 2019 Patagonman.</figcaption>
+
+</div>
+
+<div>
+
+<img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg">
+    <figcaption>Finish of 2023 Trans Am Bike Race.</figcaption>
+
+</div>
+
+</div>
+
+</div>
+                </div><!-- /col-md-6 -->
+            </div><!-- / row -->
+        </div><!-- /container -->
+    </section>
+
+
+
+
+
+    
     <!-- FOOTER SECTION -->
 
     <footer class="footer">
