--- a/index.html
+++ b/index.html
@@ -406,14 +406,22 @@
 <div>
 
 <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png">
-    <figcaption>Start of 2019 Patagonman.</figcaption>
+    <figcaption>Start of 2019 Patagonman, an iron-distance triathlon.</figcaption>
 
 </div>
 
 <div>
 
+<img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg">
+    <figcaption>Beginning of 2021 Georgia Jewel, a 100-mile trail run.</figcaption>
+
+</div>                        
+                        
+
+<div>
+
 <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg">
-    <figcaption>Finish of 2023 Trans Am Bike Race.</figcaption>
+    <figcaption>Finish of 2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</figcaption>
 
 </div>
 
