--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
 
 
                             <div class="timeline-content right">
-                                <h2>We can automate this with spreadsheets.</h2>
+                                <h2><b>2012</b> | We can automate this with spreadsheets.</h2>
 
 
-                                <p><b>2012.</b>Prior to beginning my undergrad education, I worked as a quality assurance professional. 
+                                <p>Prior to beginning my undergrad education, I worked as a quality assurance professional. 
                                     I saw an opportunity to automate generating labels by developing an app in MS Excel. 
                                     Not knowing anything about programming, I started with macros and then discovered 
                                     that I could directly tell the computer what I want it to do instead of recording 
@@ -285,7 +285,7 @@
 
 
                             <div class="timeline-content left">
-                                <h2><b>2017.</b>We can use slime mold to help humans make decisions.</h2>
+                                <h2><b>2017</b> | We can use slime mold to help humans make decisions.</h2>
 
 
                                 <p>As an undergrad, I collaborated with diverse researchers to explore how slime mold may be 
@@ -313,7 +313,7 @@
 
 
                             <div class="timeline-content right">
-                                <h2><b>2018.</b>Why's it so hard to find and use the metadata?</h2>
+                                <h2><b>2018</b> | Why's it so hard to find and use the metadata?</h2>
 
 
                                 <p>After attending a scientific conference for the first time as an undergrad, I decided that I wanted 
@@ -342,7 +342,7 @@
 
 
                             <div class="timeline-content left">
-                                <h2><b>2019.</b>sCubed positions metadata to mutually benefit authors and the scientific community.</h2>
+                                <h2><b>2019</b> | sCubed positions metadata to mutually benefit authors and the scientific community.</h2>
 
 
                                 <p>As a graduate student, I joined the Edison Lab and the Compound Identification Core (CIDC) 
@@ -369,13 +369,10 @@
 
 
                             <div class="timeline-content right">
-                                <h2>This Happened</h2>
+                                <h2><b>Now</b> | Let's advance technologies for sharing science.</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p>Connect with me to learn more about how we can advance sharing science.</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
