--- a/index.html
+++ b/index.html
@@ -161,6 +161,17 @@
                         To do this, I not only take a user-centric approach but also take opportunities to literally put myself in the users' regular
                         workflow. I appreciate collaborating with others to see an app through to production.</p>
                 </div>
+
+                <div class="col-md-4 text-center">
+                    <span class="lnr lnr-mic"></span>
+
+                    <h2>Communicate science</h2>
+
+
+                    <p>I am motivated to engage readers and listeners via both writing and visualizations. I enjoy targeting a diversity of audiences, including experts
+                    across scientific domains, business stakeholders, and the general public. I enjoy crafting clear, concise narratives that are balanced by 
+                    scientific results as well as context and impact that engages diverse audiences. </p>
+                </div>
             </div> <!-- / row -->
         </div><!-- /container -->
     </section>
