--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
                              <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
                             "fa fa-linkedin fa-3x"></i></a> 
+                            <a href="https://orcid.org/0000-0001-8627-777X"
+                            target="_blank"><i class=
+                            "ai ai-orcid"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
                             "fa fa-youtube fa-3x"></i></a> <a href=
                             "https://github.com/aemoore62" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
+
                         </div><!-- /social -->
                     </div><!-- /col-md-8 -->
                 </div><!-- /row --> 
