--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             "fa fa-linkedin fa-3x"></i></a> 
                             <a href="https://orcid.org/0000-0001-8627-777X"
                             target="_blank"><i class=
-                            "ai ai-orcid"></i></a> 
+                            "fa-brands fa-orcid"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
                             "fa fa-youtube fa-3x"></i></a> <a href=
