--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     integrity=
     "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     rel="stylesheet"><!-- FontAwesome Icon Font -->
-    <link href=
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+    <!-- <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    rel="stylesheet"><!-- LinearIcons Icon Font -->
+    rel="stylesheet">-->
+    <!-- LinearIcons Icon Font -->
     <link href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" rel=
     "stylesheet"><!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet"><!-- Timeline CSS -->
