add academic icons

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
     integrity=
     "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     rel="stylesheet"><!-- FontAwesome Icon Font -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-    />
-    <!-- <link href=
+     <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    rel="stylesheet">-->
+    rel="stylesheet">
+    <!-- AcademicIcons Icon Font -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <!-- LinearIcons Icon Font -->
     <link href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" rel=
     "stylesheet"><!-- Main Stylesheet -->
@@ -64,7 +62,7 @@
                             "fa fa-linkedin fa-3x"></i></a> 
                             <a href="https://orcid.org/0000-0001-8627-777X"
                             target="_blank"><i class=
-                            "fa-brands fa-orcid"></i></a> 
+                            "fai ai-google-scholar-square ai-3x"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
                             "fa fa-youtube fa-3x"></i></a> <a href=
