--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     integrity=
     "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     rel="stylesheet"><!-- FontAwesome Icon Font -->
-     <link href=
+    <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
-    rel="stylesheet">
-    <!-- AcademicIcons Icon Font -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-    <!-- LinearIcons Icon Font -->
+    rel="stylesheet"><!-- LinearIcons Icon Font -->
     <link href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" rel=
     "stylesheet"><!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet"><!-- Timeline CSS -->
@@ -60,9 +57,6 @@
                              <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
                             "fa fa-linkedin fa-3x"></i></a> 
-                            <a href="https://orcid.org/0000-0001-8627-777X"
-                            target="_blank"><i class=
-                            "fai ai-google-scholar-square ai-3x"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
                             "fa fa-youtube fa-3x"></i></a> <a href=
