--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
                  <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="social">
-                            
-                             <a href="https://www.linkedin.com/in/abigailelizabeth/"
-                            target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a> 
-                            <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
-                            target="_blank"><i class=
-                            "fa fa-youtube fa-3x"></i></a> <a href=
-                            "https://github.com/aemoore62" target=
-                            "_blank"><i class="fa fa-github fa-3x"></i></a>
+
+                            <a href=
+                        "https://www.linkedin.com/in/abigailelizabeth/" target=
+                        "_blank"><i class="fa fa-linkedin"></i></a>  <a href=
+                        "https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q" target=
+                        "_blank"><i class="fa fa-youtube"></i></a> <a href=
+                        "https://github.com/aemoore62" target=
+                        "_blank"><i class="fa fa-github"></i></a>
 
                         </div><!-- /social -->
                     </div><!-- /col-md-8 -->
