--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading">
-                    <h2>Skills</h2>
+                    <h2>Expertise</h2>
 
 
-                    <p class="lead">Here are a few abilities that I enjoy exercising</p>
+                    <p class="lead">Sharing complex scientific information requires new insights into established technologies as well as
+                        engaging communication. </p>
 
                     <hr>
                 </div>
@@ -132,12 +133,13 @@
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-database"></span>
 
-                    <h2>Manage metadata</h2>
+                    <h2>Develop</h2>
 
 
                     <p>While managing metadata is often an unwanted hassle, I relish in the task to regard the wide-ranging utility of metadata while
-                    simultaneously attending to the details that make metadata impactful. I appreciate the breadth of thinking and implementation required
-                    to manage metadata, ranging from considering what a sample actually is to implementing models.</p>
+                    simultaneously attending to the details that make metadata impactful. I like to repeatedly grapple with new and contrasting requirements until I've generated and prototyped ideas that highly satisfy users.
+                        To do this, I not only take a user-centric approach but also take opportunities to literally put myself in the users' regular
+                        workflow. I appreciate collaborating with others to see an app through to production. </p>
                 </div>
 
   <!-- 
@@ -155,7 +157,7 @@
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-mic"></span>
 
-                    <h2>Communicate science</h2>
+                    <h2>Communicate</h2>
 
 
                     <p>I am motivated to engage readers and listeners via both writing and visualizations. I enjoy targeting a diversity of audiences, including experts
@@ -179,7 +181,7 @@
                     <h2>Products</h2>
 
 
-                   <p class="lead">Here are a few resources that I produced to advance information in the sciences.</p>
+                   <p class="lead">I am actively developing a free suite of products to advance how scientists employ and share science.</p>
 
                     <hr>
                 </div>
