--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <a href="https://www.linkedin.com/in/abigailelizabeth/" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
                     <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q" target="_blank"><i class="fa fa-youtube fa-3x"></i></a>
                     <a href="https://github.com/aemoore62" target="_blank"><i class="fa fa-github fa-3x"></i></a>
+                    
                 </div><!-- /social -->
             </div><!-- /col-md-8 -->
         </div><!-- /row -->
@@ -62,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
-                <img class="profilepic" src="https://aemoore62.github.io/resume/images/ae_img.jpeg"/>
+                <img class="profilepic" src="https://aemoore62.github.io/resume/images/ae_img.jpeg">
                 <h2>About Me</h2>
                 <hr>
                 <p class="lead">I collaborate with diverse scientists to <b>reimagine how scientists share complex information</b>. As digital technologies advance, the mechanisms used to capture, store, and ultimately prepare scientific information for insight become increasingly important. To date, my work aims to <b>evolve how scientists employ ubiquitous technologies</b> to share details about how investigations are conducted to, in turn, troubleshoot investigations and inform biological outcomes.</p>
