--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
                         <div class="social">
                              <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a> <a href=
-                            "https://medium.com/@izzydoesizzy" target=
-                            "_blank"><i class="fa fa-medium fa-3x"></i></a>
+                            "fa fa-linkedin fa-3x"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
                             "fa fa-youtube fa-3x"></i></a> <a href=
