add google scholar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     "stylesheet"><!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet"><!-- Timeline CSS -->
     <link href="css/timeline.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
 </head>
 
 <body>
@@ -61,6 +63,11 @@
                             "fa fa-youtube fa-3x"></i></a> <a href=
                             "https://github.com/aemoore62" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
+                            <a href=
+                            "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
+                            "_blank"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+
+                            
                         </div><!-- /social -->
                     </div><!-- /col-md-8 -->
                 </div><!-- /row -->
