--- a/index.html
+++ b/index.html
@@ -64,8 +64,20 @@
                             "https://github.com/aemoore62" target=
                             "_blank"><i class="fa fa-github fa-3x"></i></a>
                             <a href=
+                            "https://orcid.org/0000-0001-8627-777X" target=
+                            "_blank"><i class="ai ai-orcid ai-3x"></i></a>
+                            <a href=
+                            "https://zenodo.org/search?page=1&size=20&q=creators.orcid:0000-0001-8627-777X" target=
+                            "_blank"><i class="ai ai-zenodo ai-3x"></i></a>
+                            <a href=
                             "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
-                            "_blank"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+                            "_blank"><i class="ai ai-google-scholar ai-3x"></i></a>
+                            <a href=
+                            "https://figshare.com/authors/Abigail_Elizabeth/12568096" target=
+                            "_blank"><i class="ai ai-figshare ai-3x"></i></a>
+                            <a href=
+                            "https://www.protocols.io/researchers/abigail-elizabeth" target=
+                            "_blank"><i class="ai ai-protocols ai-3x"></i></a>
 
                             
                         </div><!-- /social -->
@@ -341,20 +353,33 @@
                     "http://www.clearcareer.ca" target=
                     "_blank">ClearCareer</a></p>
                 </div>
-
+ 
 
                 <div class="col-md-4">
                     <div class="social-footer">
-                        <a href="http://www.twitter.com/izzydoesizzy" target=
-                        "_blank"><i class="fa fa-twitter"></i></a> <a href=
-                        "http://www.instagram.com/izzydoesizzy" target=
-                        "_blank"><i class="fa fa-instagram"></i></a> <a href=
-                        "https://ca.linkedin.com/in/ipiyale" target=
-                        "_blank"><i class="fa fa-linkedin"></i></a>  <a href=
-                        "http://www.youtube.com/user/izzydoesizzy" target=
-                        "_blank"><i class="fa fa-youtube"></i></a> <a href=
-                        "http://www.github.com/izzydoesizzy" target=
-                        "_blank"><i class="fa fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/abigailelizabeth/"
+                            target="_blank"><i class=
+                            "fa fa-linkedin fa-3x"></i></a> 
+                            <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
+                            target="_blank"><i class=
+                            "fa fa-youtube fa-3x"></i></a> <a href=
+                            "https://github.com/aemoore62" target=
+                            "_blank"><i class="fa fa-github fa-3x"></i></a>
+                            <a href=
+                            "https://orcid.org/0000-0001-8627-777X" target=
+                            "_blank"><i class="ai ai-orcid ai-3x"></i></a>
+                            <a href=
+                            "https://zenodo.org/search?page=1&size=20&q=creators.orcid:0000-0001-8627-777X" target=
+                            "_blank"><i class="ai ai-zenodo ai-3x"></i></a>
+                            <a href=
+                            "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
+                            "_blank"><i class="ai ai-google-scholar ai-3x"></i></a>
+                            <a href=
+                            "https://figshare.com/authors/Abigail_Elizabeth/12568096" target=
+                            "_blank"><i class="ai ai-figshare ai-3x"></i></a>
+                            <a href=
+                            "https://www.protocols.io/researchers/abigail-elizabeth" target=
+                            "_blank"><i class="ai ai-protocols ai-3x"></i></a>
                     </div> <!-- /social footer -->
                 </div> <!-- /col-md-4 -->
             </div><!-- /row -->
