--- a/index.html
+++ b/index.html
@@ -359,27 +359,27 @@
                     <div class="social-footer">
                         <a href="https://www.linkedin.com/in/abigailelizabeth/"
                             target="_blank"><i class=
-                            "fa fa-linkedin fa-3x"></i></a> 
+                            "fa fa-linkedin"></i></a> 
                             <a href="https://www.youtube.com/channel/UCZxZjX2cnjzm8AwQERFXX1Q"
                             target="_blank"><i class=
-                            "fa fa-youtube fa-3x"></i></a> <a href=
+                            "fa fa-youtube"></i></a> <a href=
                             "https://github.com/aemoore62" target=
-                            "_blank"><i class="fa fa-github fa-3x"></i></a>
+                            "_blank"><i class="fa fa-github"></i></a>
                             <a href=
                             "https://orcid.org/0000-0001-8627-777X" target=
-                            "_blank"><i class="ai ai-orcid ai-3x"></i></a>
+                            "_blank"><i class="ai ai-orcid"></i></a>
                             <a href=
                             "https://zenodo.org/search?page=1&size=20&q=creators.orcid:0000-0001-8627-777X" target=
-                            "_blank"><i class="ai ai-zenodo ai-3x"></i></a>
+                            "_blank"><i class="ai ai-zenodo"></i></a>
                             <a href=
                             "https://scholar.google.com/citations?hl=en&user=S8Q6u5AAAAAJ" target=
-                            "_blank"><i class="ai ai-google-scholar ai-3x"></i></a>
+                            "_blank"><i class="ai ai-google-scholar"></i></a>
                             <a href=
                             "https://figshare.com/authors/Abigail_Elizabeth/12568096" target=
-                            "_blank"><i class="ai ai-figshare ai-3x"></i></a>
+                            "_blank"><i class="ai ai-figshare"></i></a>
                             <a href=
                             "https://www.protocols.io/researchers/abigail-elizabeth" target=
-                            "_blank"><i class="ai ai-protocols ai-3x"></i></a>
+                            "_blank"><i class="ai ai-protocols"></i></a>
                     </div> <!-- /social footer -->
                 </div> <!-- /col-md-4 -->
             </div><!-- /row -->
